--- a/index.html
+++ b/index.html
@@ -1,65 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
-    <title>Aggie Airbnb | Your Home Away From Home in Nakuru</title>
-    <meta name="title" content="Aggie Airbnb | Your Home Away From Home in Nakuru" />
-    <meta name="description" content="Book spacious rooms at Bismack Whitehouse in Nakuru. Enjoy mountain views, modern amenities, and a family-friendly environment. Pet-friendly with flexible stay options." />
-    <meta name="keywords" content="Aggie Airbnb, Nakuru accommodation, Bismack Whitehouse, Nakuru rooms, mountain view, pet-friendly, family stays, Kenya vacation" />
-    <meta name="author" content="Aggie Airbnb" />
+  <title>Aggie Airbnb | Your Home Away From Home in Nakuru</title>
+  <meta name="description" content="Book spacious rooms at Bismack Whitehouse in Nakuru. Enjoy mountain views, modern amenities, and a family-friendly environment. Pet-friendly with flexible stay options." />
+  <meta name="keywords" content="Aggie Airbnb, Nakuru accommodation, Bismack Whitehouse, Nakuru rooms, mountain view, pet-friendly, family stays, Kenya vacation" />
+  <meta name="author" content="Aggie Airbnb" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aggieairbnb.com/" />
-    <meta property="og:title" content="Aggie Airbnb | Your Home Away From Home in Nakuru" />
-    <meta property="og:description" content="Discover comfortable stays at Bismack Whitehouse in Nakuru with mountain views and modern amenities. Book your perfect getaway today!" />
-    <meta property="og:image" content="/logo.png" />
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://aggieairbnb.com/" />
+  <meta property="og:title" content="Aggie Airbnb | Your Home Away From Home in Nakuru" />
+  <meta property="og:description" content="Discover comfortable stays at Bismack Whitehouse in Nakuru with mountain views and modern amenities. Book your perfect getaway today!" />
+  <meta property="og:image" content="/logo.png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://aggieairbnb.com/" />
-    <meta property="twitter:title" content="Aggie Airbnb | Your Home Away From Home in Nakuru" />
-    <meta property="twitter:description" content="Spacious rooms with mountain views in Nakuru. Pet-friendly with flexible stay options. Book via WhatsApp today!" />
-    <meta property="twitter:image" content="/logo.png" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://aggieairbnb.com/" />
+  <meta property="twitter:title" content="Aggie Airbnb | Your Home Away From Home in Nakuru" />
+  <meta property="twitter:description" content="Spacious rooms with mountain views in Nakuru. Pet-friendly with flexible stay options. Book via WhatsApp today!" />
+  <meta property="twitter:image" content="/logo.png" />
 
-    <!-- PWA / Theme -->
-    <meta name="theme-color" content="#9370DB" />
-    <!-- Fonts & Styling -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="/logo.png" />
+  <meta name="theme-color" content="#9370DB" />
 
-    <!-- Schema.org Markup for Local Business (helps Google Boost visibility) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LodgingBusiness",
-      "name": "Aggie Airbnb",
-      "image": "https://aggieairbnb.com/logo.png",
-      "url": "https://aggieairbnb.com/",
-      "telephone": "+254727012403",
-      "email": "agneskarime68@gmail.com",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Bismack Whitehouse, Mountain View Area",
-        "addressLocality": "Nakuru",
-        "addressCountry": "KE"
-      },
-      "priceRange": "$$",
-      "sameAs": [
-        "https://wa.me/254727012403",
-        "https://maps.app.goo.gl/hD8XKTmJt52YnzpS9"
-      ]
-    }
-    </script>
-  </head>
-  <body style="margin: 0; font-family: 'Nunito Sans', sans-serif; background: linear-gradient(145deg, #fff0f5, #f3e5ff); color: #333;">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  </body>
+  <!-- Local Business Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LodgingBusiness",
+    "name": "Aggie Airbnb",
+    "image": "https://aggieairbnb.com/logo.png",
+    "url": "https://aggieairbnb.com/",
+    "telephone": "+254727012403",
+    "email": "agneskarime68@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Bismack Whitehouse, Mountain View Area",
+      "addressLocality": "Nakuru",
+      "addressCountry": "KE"
+    },
+    "priceRange": "$$",
+    "sameAs": [
+      "https://wa.me/254727012403",
+      "https://maps.app.goo.gl/hD8XKTmJt52YnzpS9"
+    ]
+  }
+  </script>
+</head>
+<body style="margin:0; font-family:'Nunito Sans',sans-serif; background:linear-gradient(145deg,#fff0f5,#f3e5ff); color:#333;">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
